Changelog for GoodNews

- fixed a bug with tvs_below_content setting in Mailing editor
- [#3] send a status email to newsletter sender if mailing status changes
- renamed preinstalled Resource domcuments to prevent overwriting of existing
- preinstalled Resource documents aren't moved to tree root on package update (Installer)
- [#38] fixed a php warning in processhandler class

 
GoodNews 1.4.0-pl (2015-11-05)
--------------------------------------------------
- completely revised the Subscriber registration system (front-end)
- new professional system mail templates (activation, success, request links, etc.)
- fixed a few nasty bugs in Susbcriber registration
- [#22] enable subscription of users which already have an account in the MODX instance
- [#21] enable re-subscription of users with cancelled or forgotten subscriptions
- fixed security/privacy problems (now front-end forms will never tell if email addresses already exists)


GoodNews 1.3.9-pl (2015-10-23)
--------------------------------------------------
- improved robustness of mail processing
- fixed a nasty bug with lockfile handling + recipient status update
- fixed error messages in GoodNews installer while updating database schema (...field allready exists)
- added "public" field to Groups (same behaviour as in Categories)
- changed behaviour of "public" field for Categories and makes it possible to send newsletters to non-public Categories


GoodNews 1.3.8-pl (2015-09-13)
--------------------------------------------------
- fixed a bug in combining filters on Subscribers grid
- [#34] added Category filter to Subscribers grid
- added Activated filter to Subscribers grid
- added plugin version and icons to action-toolbar
- reordered newsletter grid context menu (now it should be more logical)
- removed/disabled Delete action (menu and button) from mailing when sending is in progress 
- added action buttons to newsletters grid
- [#35] fixed a problem with send counter when timed out mails are detected